     especially to acquisition wrappers.

     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  after 2.9.0

    Bugs fixed

      - Collector #1991: ZPublisher did not deal properly with a trailing
        %20 in the URL

      - Collector #1989:  'test.py' now copyied to $ZOPE_HOME/bin
        during installation, which re-enables tests run from the instance
        home.

      - zope.app.introspector was not included with the source archive

      - Collector #2013: improved XHTML conformance of error messages,
        some of which did not close '<p>' tags.

      - Collector #1999: fixed broken FTP rename functionality
        (RNFR now returns 350 as status code instead 250)

      - officially deprecated the zLOG module (to be removed in Zope 2.11).
        Use the logging module of Python instead.

      - Replaced used of deprecated 'OFS.content_types' module with cognates
        from 'zope.app.content_types'.

      - Collector #2002: fixed broken 'ls -R' functionality (didn't
        recurse properly subclasses of OFS.Folder)

  Zope 2.9.0 (2006/01/09)

    Bugs fixed

      - deprecated OFS.content_types

      - Fixed ConflictError when using sessions.

  Zope 2.9.0 beta 2 (2005/12/24)

    Bugs fixed

      - Collector #1939: When running as a service, Zope could
        potentially collect too much log output filling the NT Event
        Log. When that happened, a 'print' during exception handling
        would cause an IOError in the restart code causing the service
        not to restart automatically.

        Problem is that a service/pythonw.exe process *always* has an
        invalid sys.stdout.  But due to the magic of buffering, small
        "print" statements would not fail - but once the file actually